HelloUltraviolet/Fixtures/RejectedSource/Statements/ContinueOutsideLoop/Expected.uv
//! Expected diagnostic metadata for the ContinueOutsideLoop rejected-source specimen.

expectedDiagnostic("E-SEM-3163", "rule.18.Continue-Outside-Loop")
